; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/inseng/extr_icif.c_section_get_dword_field.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/inseng/extr_icif.c_section_get_dword_field.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inf_section = type { i32 }
%struct.inf_value = type { i32 }

@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inf_section*, i8*, i32, i32*, i32)* @section_get_dword_field to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @section_get_dword_field(%struct.inf_section* %0, i8* %1, i32 %2, i32* %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.inf_section*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca %struct.inf_value*, align 8
  store %struct.inf_section* %0, %struct.inf_section** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32* %3, i32** %10, align 8
  store i32 %4, i32* %11, align 4
  %13 = load %struct.inf_section*, %struct.inf_section** %7, align 8
  %14 = load i8*, i8** %8, align 8
  %15 = call %struct.inf_value* @inf_get_value(%struct.inf_section* %13, i8* %14)
  store %struct.inf_value* %15, %struct.inf_value** %12, align 8
  %16 = load %struct.inf_value*, %struct.inf_value** %12, align 8
  %17 = icmp ne %struct.inf_value* %16, null
  br i1 %17, label %22, label %18

18:                                               ; preds = %5
  %19 = load i32, i32* %11, align 4
  %20 = load i32*, i32** %10, align 8
  store i32 %19, i32* %20, align 4
  %21 = load i32, i32* @TRUE, align 4
  store i32 %21, i32* %6, align 4
  br label %28

22:                                               ; preds = %5
  %23 = load %struct.inf_value*, %struct.inf_value** %12, align 8
  %24 = load i32, i32* %9, align 4
  %25 = load i32*, i32** %10, align 8
  %26 = load i32, i32* %11, align 4
  %27 = call i32 @value_get_dword_field(%struct.inf_value* %23, i32 %24, i32* %25, i32 %26)
  store i32 %27, i32* %6, align 4
  br label %28

28:                                               ; preds = %22, %18
  %29 = load i32, i32* %6, align 4
  ret i32 %29
}

declare dso_local %struct.inf_value* @inf_get_value(%struct.inf_section*, i8*) #1

declare dso_local i32 @value_get_dword_field(%struct.inf_value*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
